# ISIMA_ZZ3

./: Ao-XIE_rapport_projet_ISIMA.doc  Calendrier_ZZ3_2024-2025 (1).xlsx  Modele_rapport_ISIMA - Charte graphique.doc  README.md  ~$-XIE_rapport_projet_ISIMA.doc
AAC/A-Star/: CMakeLists.txt
AAC/A-Star-Qt/: CMakeLists.txt
AAC/A-Star-Qt/include/: GridWidget.hpp
AAC/A-Star-Qt/src/: A_Star.cpp  GridWidget.cpp  main.cpp
AAC/A-Star/include/: A_Star.hpp  Grid.hpp
AAC/A-Star/src/: A_Star.cpp  Grid.cpp  main.cpp
AAC/A-Star/tests/: tests.cpp
AAC/KMP/: CMakeLists.txt
AAC/KMP/include/: KMP.h  utils.h
AAC/KMP/src/: KMP.cpp  main.cpp  utils.cpp
AAC/KMP/tests/: test_kmp.cpp
AAC/K_Means/: K_Means.py  Kmeans_Plus_Plus.py  Visualization_Program.ipynb  environment.yml  requirements.txt
AI:ML/TP2/notebooks/: 01-perceptron-etud.ipynb  02-PMC_2couches-etud.ipynb
AI_ML/Challenge/: ai-ml-isima.ipynb  ai-ml-isima.py  challenge.ipynb  challenge.py  requirements.txt
AI_ML/Challenge/.ipynb_checkpoints/: ai-ml-isima-checkpoint.ipynb
AI_ML/TP2/notebooks/: 02-PMC_1couche-etud.ipynb
AI_ML/TP3/: 03-CNN-Keras-etud.ipynb  PW3_Q2_Colorization_CNN_student.ipynb
AI_ML/TP4/: 04-autoencoder_2couchesDenses-Keras-etud.ipynb  04-autoencoder_CNN-Keras-etud.ipynb
AI_ML/TP6/: 06-Transfer_Learning-Keras-etud.ipynb
AI_ML/TP7/: transformers_etudiant.ipynb
AI_ML/TP8/: 08-GAN_CNN_Keras-etud.ipynb  PW7_Q1_GAN_1D_student.ipynb  PW9_VAE-student-TF.ipynb
AdminBD/: TP1-InfluxDB.sql  TP2-InfluxQL.sql  TP3-Flux.sql  TP4-InfluxDB-MySQL.sql  TP5-Taches-Alertes.sql  script-BDcapteurs.sql
AdminBD/GBD/: A.sql
Algo/OpenMP/: omp_test  omp_test.c
Algo/TP1/: mpi_core_binding  mpi_core_binding.c
Algo/TP1/Calcul_Matriciel/: hello_omp.c  prodMatriciel_dynamic_seq
Algo/TP1/Docker/: Docker_Test.c
Algo/TP1/Newton/: hello_omp.c  monte_carlo_pi_optimized.c
Algo/TP1/Newton/NewtonSDL2/: fonctions.h  newtonSDL2.c
Algo/TP2/: hello_mpi.c  p2p.c  p2p_anneau.c
Algo/TP4/: TP4.c
Anglai/: Promo25 English Padlet Logbook Instructions Template.docx
CPP/: ElectronicDevice.sh
CPP/Car/: CMakeLists.txt
CPP/Car/src/: Car.hpp  CarFactory.cpp  CarFactory.hpp  ElectricCar.hpp  Garage.hpp
CPP/Car/test/: CMakeLists.txt  test_car.cpp
CPP/Correction/: cpp_zz3--tp_1--correction.tgz  cpp_zz3--tp_2--correction.tgz  cpp_zz3--tp_3--correction.tgz  cpp_zz3--tp_4--correction.tgz  cpp_zz3--tp_5--correction.tgz
CPP/Correction/tp_1/src/: main_point.cpp  nuage.cpp  polaire.hpp  vecteur.cpp  vecteur.hpp
CPP/Correction/tp_2/src/: cartesien.cpp  nuage.hpp  polaire.cpp
CPP/Correction/tp_3/src/: chaine.hpp  cosinus.hpp  exception.hpp  exponentielle.hpp  (+2 more)
CPP/Correction/tp_4/: autotests.txt
CPP/Correction/tp_6/: CMakeLists.txt
CPP/Electronic_Devices/: CMakeLists.txt
CPP/Electronic_Devices/src/: Device.cpp  Device.hpp  DeviceFactory.cpp  DeviceFactory.hpp  DeviceManager.cpp  DeviceManager.hpp  DeviceObserver.cpp  DeviceObserver.hpp  ProxyDevice.cpp  SmartDevice.cpp  SmartDevice.hpp
CPP/Electronic_Devices/test/: CMakeLists.txt  test_devices.cpp
CPP/Pokemon/: CMakeLists.txt
CPP/Pokemon/src/: Box.hpp  Factory.hpp  Pokedex.hpp  Pokemon.hpp  Singleton.cpp  Singleton.hpp
CPP/Pokemon/tests/: test_pokemon.cpp
CPP/examen-blanc-cpp-zz3/: CMakeLists.txt
CPP/examen-blanc-cpp-zz3/src/: arme.hpp  enchantement.hpp  fabricant.hpp  inventaire.hpp  item.hpp
CPP/examen-blanc-cpp-zz3/test/: test_bonus.cpp  test_examen.cpp
CPP/examen_blanc/examen-blanc-cpp-zz3/: CMakeLists.txt
CPP/tp_1/src/: cartesien.cpp  cartesien.hpp  nuage.cpp  nuage.hpp  point.cpp  point.hpp  polaire.cpp  polaire.hpp
CPP/tp_1/test/: tp1_test.cpp
CPP/tp_2/: CMakeLists.txt
CPP/tp_2/src/: barycentre.hpp  cartesien.hpp  nuage.hpp  point.cpp  point.hpp  polaire.hpp
CPP/tp_2/test/: tp2_test.cpp
CPP/tp_3/: CMakeLists.txt
CPP/tp_3/src/: chaine.hpp  exception.hpp  exponentielle.hpp  factorielle.hpp  puissance.hpp
CPP/tp_3/test/: tp3_test.cpp
CPP/tp_4/src/: carte.hpp  usineCarte.hpp
CPP/tp_4/test/: tp4_test.cpp
CPP/tp_5/src/: classe.hpp  comparateur.hpp  echantillon.hpp  histogramme.hpp  main_histo.cpp  valeur.hpp
CPP/tp_5/test/: tp5_test.cpp
CPP/tp_6/src/: parallele.cpp
Calcul_Parallele/TP1/: arm_core_test  arm_core_test.c  thread_cpu_info  thread_cpu_info.c
Calcul_Parallele/TP1/Calcul_Matriciel/: hello_omp
Calcul_Parallele/TP1/Docker/: Docker_Test
Calcul_Parallele/TP2/: hello_mpi  p2p  p2p_anneau  p2p_arbre.c
DevOps/TP2/: docker_build.sh  docker_push.sh  docker_run.sh  docker_tag.sh  git_clone.sh  git_tag.sh
FormationRecherche/: 1_2005 Bezivin On the Unification Power of Models.docx  Formation_Recherche_6eme.docx
Infra/: aoxie-openrc.sh  main.tf
Infra/TP4/: TP4_Key.pem
ManagementProjet/: Management de Projet 3ème année.docx  Management_de_Projet_Rapport_Commun.doc  Management_de_Projet_Rapport_Personnel_Ao-XIE.doc
PAM/Pokemon/Pokemon/: ContentView.swift  PokemonApp.swift  PokemonImage.swift
PAM/Pokemon/Pokemon.xcodeproj/: project.pbxproj
PAM/TP1/TP1_Compose/: settings.gradle.kts
PAM/YOLO/yolo11m_saved_model/: fingerprint.pb  metadata.yaml
PAM/YOLO/yolo11n_saved_model/: fingerprint.pb  metadata.yaml
PAM/YOLO_Kotlin/: settings.gradle.kts
PAM/YOLO_Kotlin/app/: build.gradle.kts
PAM/YOLO_Kotlin/gradle/: libs.versions.toml
PAM/landmarks/landmarks/: landmarksApp.swift
PAM/landmarks/landmarks.xcodeproj/: project.pbxproj
Simu/Class_C/: PointGraphique.c  PointGraphique.h  main.c  my_program
Simu/Exeman/: Meta.cpp  structure.c  vtable.c
Simu/TP1/: TP1.pages
Simu/TP2/mt19937/: MT.c  montecarlo.c  montecarlo_lookup.c  mt19937ar_h.c
Simu/TP3/: ObjetGraphique.c  ObjetGraphique.h  main  main.c
Simu/TP5/CLHEP/: Doxyfile  Makefile  Multi-Thread_Monte-Carlo.cpp  OpenMP-Monte_Carlo.cpp  Single-Thread_Monte-Carlo.cpp  checkStatus.cpp  monte_carlo.hpp  result.md  status.hpp
Simu/TP5/Random/: Makefile  config.status  mt_state  testRand.cc  testStatus.cc
Simu/TP6/: Floating-point errors and compensation algorithm .pages  IDM_REF.enl
Simu/TP6/TP_6-b/: Makefile  algo.c  examples.c  mt19937.c  mt19937.h
(+187 files in other folders)
